<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_small"
            android:text="@string/label_filter"
            android:textAppearance="@style/TextAppearance.InDrive.TitleSmall" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="@dimen/padding_small"
            android:text="@string/label_clear"
            android:textAppearance="@style/TextAppearance.InDrive.TitleGroup"
            android:textColor="@color/color_interactive_accent" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_medium"
        android:text="@string/label_accept_radius_description"
        android:textAppearance="@style/TextAppearance.InDrive.TitleGroup" />

    <TextView
        android:id="@+id/tv_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_small"
        tools:text="1 km"
        android:textAppearance="@style/TextAppearance.InDrive.Text.Title" />

    <com.aralhub.ui.components.Material3SliderView
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginHorizontal="@dimen/margin_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.InDrive.TitleSmall"
            android:text="@string/label_1_km" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.InDrive.TitleSmall"
            android:text="@string/label_2_km" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_3_km"
            android:textAppearance="@style/TextAppearance.InDrive.TitleSmall" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.InDrive.TitleSmall"
            android:text="@string/label_4_km" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_5_km"
            android:textAppearance="@style/TextAppearance.InDrive.TitleSmall" />


    </LinearLayout>


    <Button
        android:id="@+id/btn_apply"
        style="@style/Widget.InDrive.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/label_apply" />

</LinearLayout>