<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_small"
    android:paddingBottom="@dimen/padding_small">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        style="@style/Widget.InDrive.BottomSheet.DragHandle"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:padding="0dp"
        android:paddingBottom="0dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_success_icon"
        android:src="@drawable/im_telegram"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_telegram_bot"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.InDrive.Text.Title"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:text="@string/label_telegram_bot_description"
        android:gravity="center"

        android:textColor="@color/color_content_secondary"
        android:textAppearance="@style/TextAppearance.InDrive.TitleGroup"/>

    <Button
        android:id="@+id/btn_go_to_telegram"
        style="@style/Widget.InDrive.Button.Primary"
        android:layout_width="match_parent"
        android:text="@string/label_go_to_telegram"
        android:layout_marginVertical="@dimen/margin_small"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_back"
        style="@style/Widget.InDrive.Button.Variant"
        android:layout_width="match_parent"
        android:text="@string/label_back"
        android:layout_height="wrap_content"/>

</LinearLayout>