<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        style="@style/Widget.InDrive.BottomSheet.DragHandle"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:padding="0dp"
        android:paddingBottom="0dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_success_icon"
        android:src="@drawable/im_done" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.InDrive.Text.Title"
        android:textSize="26sp"
        tools:text="Siz 14 000 som dáramat taptıńız" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_small"
        android:textAppearance="@style/TextAppearance.InDrive.Text"
        android:text="@string/label_trip_ended_description_payment_cash" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="36dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_total_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12 500 som"
                android:textAppearance="@style/TextAppearance.InDrive.BodyLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_total_money"
                android:textAppearance="@style/TextAppearance.InDrive.TitleSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_waiting_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12 500 som"
                android:textAppearance="@style/TextAppearance.InDrive.BodyLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kútiw waqtı ushın"
                android:textAppearance="@style/TextAppearance.InDrive.TitleSmall" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_waiting_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12 min"
                android:textAppearance="@style/TextAppearance.InDrive.BodyLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_trip_duration"
                android:textAppearance="@style/TextAppearance.InDrive.TitleSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_total_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="6.3 km"
                android:textAppearance="@style/TextAppearance.InDrive.BodyLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_total_distance"
                android:textAppearance="@style/TextAppearance.InDrive.TitleSmall" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="16dp">


        <ImageView
            android:id="@+id/iv_payment_method"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/margin_small"
            android:src="@drawable/ic_cash"
            tools:text="4 min" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_offline_payment"
            android:textAppearance="@style/TextAppearance.InDrive.BodyLarge" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_close"
        style="@style/Widget.InDrive.Button.Variant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginVertical="@dimen/margin_small"
        android:text="@string/label_close" />

</LinearLayout>