<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        style="@style/Widget.InDrive.BottomSheet.DragHandle"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:padding="0dp"
        android:paddingBottom="0dp" />

    <LinearLayout
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_client_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:paddingHorizontal="@dimen/padding_small"
                android:maxEms="10"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.InDrive.BodyLarge.SemiBold"
                android:textSize="14sp"
                tools:text="Babur" />


            <TextView
                android:id="@+id/tvDistanceToClient"
                android:paddingHorizontal="@dimen/padding_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="600 m"
                android:textAppearance="@style/TextAppearance.InDrive.TitleSmall"
                tools:text="600 m" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_from_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:orientation="horizontal">

        <View
            android:layout_width="24dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:background="@drawable/ic_from_location" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_from_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_small"
                android:textAppearance="@style/TextAppearance.InDrive.BodyLarge"
                tools:text="Uy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_small"
                android:text="@string/label_pick_up_location"
                android:textAppearance="@style/TextAppearance.InDrive.TitleSmall" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_to_location"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal">

        <View
            android:id="@+id/layout_to_location_icon"
            android:layout_width="24dp"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:layout_height="24dp"
            android:background="@drawable/ic_material_symbols_radio_button_checked" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_to_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_small"
                android:textAppearance="@style/TextAppearance.InDrive.BodyLarge"
                tools:text="Uy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_small"
                android:text="@string/label_address_location"
                android:textAppearance="@style/TextAppearance.InDrive.TitleSmall" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/iv_payment_method"
            android:contentDescription="@string/cd_payment_method_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:layout_gravity="center"
            tools:src="@drawable/ic_cash"
            tools:text="4 min" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="10 000 som"
            android:textAppearance="@style/TextAppearance.InDrive.Text.TitleBody" />

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginEnd="8dp"
            tools:text="7 km"
            android:textAppearance="@style/TextAppearance.InDrive.TitleSmall"
            android:textColor="@color/color_content_secondary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:baselineAligned="false"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:id="@+id/btn_cancel"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/bg_cancel_button"
                android:clickable="true"
                android:foreground="@drawable/ripple_round" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                android:text="@string/label_cancel_trip"
                android:textAppearance="@style/TextAppearance.InDrive.TitleSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:id="@+id/btn_call"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/bg_call_button"
                android:clickable="true"
                android:foreground="@drawable/ripple_round" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                android:text="@string/label_call"
                android:textAppearance="@style/TextAppearance.InDrive.TitleSmall" />

        </LinearLayout>

    </LinearLayout>

    <Button
        style="@style/Widget.InDrive.Button.Primary"
        android:text="@string/label_navigator"
        android:layout_margin="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"/>


    <com.aralhub.ui.components.SlideButton
        android:id="@+id/slide_arrived"
        android:layout_width="match_parent"
        app:SlideButtonText="@string/label_arrived"
        android:layout_margin="@dimen/margin_small"
        android:layout_height="56dp" />

</LinearLayout>