<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/tb_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentInsetStartWithNavigation="0dp"
        android:navigationIcon="@drawable/ic_material_symbols_arrow_back"
        android:title="@string/label_account_info" />

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_medium"
        android:background="@drawable/shape_circle_icon_gray"
        android:contentDescription="@string/cd_avatar"
        android:src="@drawable/ic_user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_medium"
        android:paddingVertical="@dimen/padding_small">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.InDrive.BodyLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ózgertiw ushın, ústine basıń"
            android:textAppearance="@style/TextAppearance.InDrive.TitleSmall" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:background="@color/color_gray_3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_medium"
        android:paddingVertical="@dimen/padding_small">

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.InDrive.BodyLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ózgertiw ushın, ústine basıń"
            android:textAppearance="@style/TextAppearance.InDrive.TitleSmall" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:background="@color/color_gray_3" />


    <TextView
        android:id="@+id/tv_delete_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_medium"
        android:paddingVertical="@dimen/padding_medium"
        android:text="@string/label_delete_account"
        android:textAppearance="@style/TextAppearance.InDrive.BodyLarge"
        android:textColor="@color/color_status_error" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:background="@color/color_gray_3" />


</LinearLayout>